--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     image: apikibexinhos
     build:
       context: ./api
-      dockerfile: Dockerfile
+      dockerfile: src/Dockerfile
     restart: unless-stopped
     ports:
       - "5001:5001"
