--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=yourStrongPassword!
+      - SA_PASSWORD=${DBPassword}
     ports:
       - "1433:1433"
     volumes:
@@ -25,7 +25,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:5001
-      - ConnectionStrings__DefaultConnection=Server=db.kibexinhos,1433;Database=kibexinhos;User Id=sa;Password=yourStrongPassword!;
+      - ConnectionStrings__DefaultConnection=Server=db.kibexinhos,1433;Database=kibexinhos;User Id=${DBUser};Password=${DBPassword};
     depends_on:
       db.kibexinhos:
         condition: service_started
