--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:5001
       - ConnectionStrings__DefaultConnection=Server=db.kibexinhos,1433;Database=kibexinhos;User Id=${DBUser};Password=${DBPassword};
+      - SendGridSettings__ApiKey=${SendGridApiKey}
     depends_on:
       db.kibexinhos:
         condition: service_started
